--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,15 +13,16 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  provider: ^6.0.0
-  intl: ^0.20.0
+  provider: any
+  intl: any
   form_fields:
     path: ../
+  logger: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: any
 
 flutter:
   uses-material-design: true
