--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,7 @@
 name: form_fields
-description: A comprehensive and reusable Flutter form field widget with support for multiple input types including text, email, phone, password, date, time, and more.
+description: A comprehensive and reusable Flutter form field widget with support
+  for multiple input types including text, email, phone, password, date, time,
+  and more.
 version: 1.0.0
 homepage: https://github.com/enerren/form_fields
 repository: https://github.com/enerren/form_fields
@@ -12,12 +14,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.0.0
-  intl: ^0.20.0
+  intl: any
+  provider: any
 
 dev_dependencies:
+  flutter_lints: any
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
-flutter:
+flutter: null
