--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,11 +19,16 @@ dependencies:
     path: ../
   logger: any
   go_router: ^14.0.0
+  dio: ^5.4.3
+  json_annotation: ^4.9.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: any
+  build_runner: ^2.4.11
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
